Reads scheduler from dex file